app/src/main/java/com/example/bookclub/errors/StudyStartAndEndDateNotValidException.java
package com.example.bookclub.errors;

public class StudyStartAndEndDateNotValidException extends RuntimeException {
    public StudyStartAndEndDateNotValidException() {
        super("Study StartDate and EndDate not valid");
    }
}
